<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/baseGrey"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="yackeen.com.faragallah.Home.MainActivity">

    <LinearLayout
        android:id="@+id/headOffice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/headOffice"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/address"
                android:textColor="@color/darkestGrey"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/tel"
                android:textColor="@color/darkestGrey"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/fax"
                android:textColor="@color/darkestGrey"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_180sdp"
        android:layout_marginRight="@dimen/_180sdp"
        android:background="@color/colorPrimary" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_200sdp"
        android:layout_marginRight="@dimen/_200sdp"
        android:background="@color/baseGrey" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginLeft="@dimen/_180sdp"
        android:layout_marginRight="@dimen/_180sdp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/factory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/factory"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/address2"
                android:textColor="@color/darkestGrey"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/tel2"
                android:textColor="@color/darkestGrey"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/fax2"
                android:textColor="@color/darkestGrey"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                app:srcCompat="@drawable/ic_mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/mail1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".9"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                app:srcCompat="@drawable/ic_mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/mail2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                app:srcCompat="@drawable/ic_language_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/_3sdp"
                android:text="@string/web"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
