<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseGrey"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="yackeen.com.faragallah.Home.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="@dimen/_15sdp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/map_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/europe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_weight="1"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/red_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/baseGrey"
                    android:gravity="top"
                    android:maxLines="1"
                    android:text="@string/square1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/europe"
                    android:textColor="@color/darkestGrey"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/africa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_weight="1"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/red_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/baseGrey"
                    android:gravity="top"
                    android:maxLines="1"
                    android:text="@string/square2"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/africa"
                    android:textColor="@color/darkestGrey"
                    android:padding="@dimen/_1sdp"
                    android:textSize="@dimen/_6sdp"
                    />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/asia"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_weight="1"
            android:visibility="visible">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/red_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <me.grantland.widget.AutofitTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@color/baseGrey"
                    android:gravity="top"
                    android:maxLines="1"
                    android:text="@string/square3"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_10sdp"
                    android:textStyle="bold" />

                <me.grantland.widget.AutofitTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/asia"
                    android:textColor="@color/darkestGrey"
                    android:textSize="@dimen/_8sdp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>
